@@ -7,6 +7,7 @@ sunuo (0.3.2) unstable; urgency=low
       from Kai Sassmannshausen)
     - use log4net for logging
     - removed Address from ServerList
+    - default to server list from Config.GameServerListConfig
 
  --
 
